更新 Spectre.css 和 Marked.js
Spectre.css v0.5.5
Marked.js v0.5.2

--- a/jac/notebook.css
+++ b/jac/notebook.css
@@ -70,7 +70,7 @@ ins, u {
 	bottom: 1rem;
 	padding: .5rem;
 	overflow-y: auto;
-	background: #f8f9fa;
+	background: #f7f8f9;
 	-webkit-overflow-scrolling: touch;
 }
 
